Реализация проекта ShareIt (спринт 13). Версия 2