@@ -8,7 +8,6 @@ import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.mapper.ItemMapper;
 import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.storage.ItemStorage;
-import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.storage.UserStorage;
 
 import java.util.ArrayList;
@@ -17,7 +16,7 @@ import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
-public class ItemService {
+public class ItemService implements ItemServiceInterface {
     private final ItemStorage itemStorage;
     private final UserStorage userStorage;
 
@@ -27,26 +26,25 @@ public class ItemService {
         this.userStorage = userStorage;
     }
 
+    @Override
     public ItemDto createItem(ItemDto itemDto, int userId) {
-        Item newItem = new Item();
-        ItemMapper.toItem(newItem, itemDto);
-        User owner = userStorage.getUserById(userId);
-        newItem.setOwner(owner);
+        Item newItem = ItemMapper.toItem(new Item(), itemDto);
+        newItem.setOwner(userStorage.getUserById(userId));
         Item createdItem = itemStorage.createItem(newItem);
         return ItemMapper.toItemDto(createdItem);
     }
 
+    @Override
     public ItemDto updateItem(ItemDto itemDto, int itemId, int userId) {
-        Item updatedItem;
-        Item item = new Item(itemStorage.getItemById(itemId));
+        Item item = ItemMapper.toItem(new Item(itemStorage.getItemById(itemId)), itemDto);
         if (!Objects.equals(item.getOwner().getId(), userId)) {
             throw new ObjectNotFoundException("User is not owner of item!");
         }
-        ItemMapper.toItem(item, itemDto);
-        updatedItem = itemStorage.updateItem(item);
+        Item updatedItem = itemStorage.updateItem(item);
         return ItemMapper.toItemDto(updatedItem);
     }
 
+    @Override
     public List<ItemDto> findAll() {
         return itemStorage.findAll()
                 .stream()
@@ -54,12 +52,14 @@ public class ItemService {
                 .collect(Collectors.toList());
     }
 
+    @Override
     public ItemDto getItemById(int id) {
         return ItemMapper.toItemDto(itemStorage.getItemById(id));
     }
 
+    @Override
     public List<ItemDto> searchItems(String text) {
-        if (text.isBlank()) {
+        if (StringUtils.isBlank(text)) {
             return new ArrayList<>();
         }
         return itemStorage.findAll()
@@ -69,11 +69,13 @@ public class ItemService {
                 .collect(Collectors.toList());
     }
 
+    @Override
     public void removeItemById(int id) {
         itemStorage.getItemById(id);
         itemStorage.removeItemById(id);
     }
 
+    @Override
     public List<ItemDto> getItemsByUserId(int userId) {
         return itemStorage.findAll()
                 .stream()
